# Cuda

./: CMakeLists.txt  life3d.cu  life3d_gpu.cu
